--- a/style.css
+++ b/style.css
@@ -24,12 +24,29 @@ body {
     overflow: hidden;
 }
 
+.container {
+    background-color: white;
+    display: flex;
+}
+
 .result {
-    background-color: hsl(234, 85%, 45%);
+    background-color: hsl(241, 81%, 54%);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     width: 50%;
+    border-radius: 30px;
+    text-align: center;
+    color: hsl(221, 100%, 96%);
+}
+
+.test-result {
+    border-radius: 50%;
+    background-image: linear-gradient(hsl(224, 30%, 27%), hsl(241, 81%, 54%));
+    width: 180px;
+    height: 180px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card-title {
@@ -38,12 +55,14 @@ body {
 
 .strong-result {
     font-weight: 800;
-    font-size: 45px;
+    font-size: 65px;
     margin: 0;
+    padding-top: 35px;
 }
 
 .text {
     margin: 0;
+    font-size: 15px;
 }
 
 .header {
@@ -60,13 +79,76 @@ body {
 }
 
 .summary-header {
-    margin: 0;
+    margin-left: 35px;
 }
 
 .result-list {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.result-element {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 15px;
+    width: 75%;
+    height: 40px;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.r {
+    background-color: seashell;
+}
+
+.red{
+    color: hsl(0, 100%, 67%);
+}
+
+.y {
+    background-color: cornsilk;
+}
+
+.yellow {
+    color: hsl(39, 100%, 56%);
+}
+
+.g {
+    background-color: mintcream;
+}
+
+.green {
+    color: hsl(166, 100%, 37%);
+}
+
+.b {
+    background-color: aliceblue;
+}
+
+.blue {
+    color: hsl(234, 85%, 45%);
+}
+
+.img-icon {
+    margin: 0;
+}
+
+.continue-button {
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    align-items: center;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    border-radius: 30px;
+    background-color: hsl(224, 30%, 27%);
+    color:hsl(221, 100%, 96%);
 }
 
 .continue {
