--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body {
 .container {
     background-color: white;
     display: flex;
+    min-height: fit-content;
+    flex-wrap: wrap;
 }
 
 .result {
@@ -35,6 +37,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     width: 50%;
+    min-height: fit-content;
     border-radius: 30px;
     text-align: center;
     color: hsl(221, 100%, 96%);
@@ -43,31 +46,47 @@ body {
 .test-result {
     border-radius: 50%;
     background-image: linear-gradient(hsl(224, 30%, 27%), hsl(241, 81%, 54%));
-    width: 180px;
-    height: 180px;
     margin-left: auto;
     margin-right: auto;
+    width: 150px;
+    height: 150px;
+    min-width: 150px;
+    max-width: 150px;
+    max-height: 150px;
+    min-height: 150px;
 }
 
 .card-title {
     margin: 0;
+    opacity: 0.7;
+    padding-bottom: 15px;
 }
 
 .strong-result {
     font-weight: 800;
     font-size: 65px;
     margin: 0;
-    padding-top: 35px;
+    padding-top: 20px;
+}
+
+.circle-text {
+    opacity: 0.5;
+    margin: 0;
 }
 
 .text {
     margin: 0;
     font-size: 15px;
+    padding: 50px;
+    padding-top: 10px;
+    opacity: 0.7;
 }
 
 .header {
     font-weight: 700;
     margin: 0;
+    padding-top: 30px;
+    line-height: 10%;
 }
 
 .detailed-result {
@@ -80,6 +99,8 @@ body {
 
 .summary-header {
     margin-left: 35px;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .result-list {
@@ -101,7 +122,7 @@ body {
     border-radius: 10px;
 }
 
-.r {
+.reaction {
     background-color: seashell;
 }
 
@@ -109,7 +130,7 @@ body {
     color: hsl(0, 100%, 67%);
 }
 
-.y {
+.memory {
     background-color: cornsilk;
 }
 
@@ -117,7 +138,7 @@ body {
     color: hsl(39, 100%, 56%);
 }
 
-.g {
+.verbal {
     background-color: mintcream;
 }
 
@@ -125,12 +146,22 @@ body {
     color: hsl(166, 100%, 37%);
 }
 
-.b {
+.visual {
     background-color: aliceblue;
 }
 
 .blue {
     color: hsl(234, 85%, 45%);
+}
+
+.img-div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.img-div span {
+    margin-left: 10px;
 }
 
 .img-icon {
@@ -153,4 +184,55 @@ body {
 
 .continue {
     margin: 0;
+}
+
+.continue-button:hover {
+    background-color: hsl(252, 100%, 67%);
+}
+
+.continue-button:active {
+    background-color: hsl(241, 81%, 54%);
+}
+
+.attribution { 
+    font-size: 11px; text-align: center; 
+    margin-top: 15px;
+}
+    
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
+@media (max-width: 767px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .test {
+        height: 100%;
+        width: auto;
+        overflow: visible;
+    }
+    
+    .result{
+        width: 100%;
+        height: 45%;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 30px;
+        border-bottom-right-radius: 30px;
+    }
+
+    .detailed-result {
+        width: 100%;
+        height: 55%;
+    }
+
+    .continue-button {
+        margin-bottom: 20px;
+    }
+
+    .card-title {
+        margin-top: 20px;
+    }
 }
