--- a/style.css
+++ b/style.css
@@ -204,13 +204,19 @@ body {
 }
 
 @media (max-width: 767px) {
+    html, body {
+        height: auto;
+    }
+
     .container {
         flex-direction: column;
     }
 
     .test {
-        height: 100%;
+        min-height: fit-content;
         width: auto;
+        height: auto;
+        display: block;
         overflow: visible;
     }
     
